bad/assign_field_class_of_field_bool.example_compiler_output
ERROR
[1mbad/assign_field_class_of_field_bool.lat:12:16: [1;31merror: [0;1massigning to `Y` from incompatible type `boolean`[m
	(new D).c.fld = true;
	              [1;32m^[m
